<resources>
    <string name="app_name">fragment_listiew_recycleview</string>
        <string name="username">Username</string>
        <string name="password">Password</string>
        <string name="login">Login</string>
        <string name="register">Register</string>
        <string name="forgotpass">Forgot password</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="address">Address</string>
    <string name="fullname">Full Name</string>

</resources>
