<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.buidanhnam.fragment_listiew_recycleview.MainActivity">
    <EditText
        android:id="@+id/edt_register_Usernam"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/username"
        android:textSize="10sp" />
    <EditText
        android:id="@+id/edt_register_Pass"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:textSize="10sp" />
    <EditText
        android:id="@+id/edt_register_fullname"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="60dp"
        android:hint="@string/fullname"
        android:textSize="10sp" />
    <EditText
        android:id="@+id/edt_register_address"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="60dp"
        android:hint="@string/address"
        android:textSize="10sp" />
    <EditText
        android:id="@+id/edt_register_phonenumber"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="60dp"
        android:hint="@string/phoneNumber"
        android:textSize="10sp" />
    <LinearLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <Button
            android:text="@string/register"
            android:layout_marginLeft="10dp"
            android:id="@+id/btn_cf_register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
</ScrollView>