<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.buidanhnam.fragment_listiew_recycleview.MainActivity">
    <EditText
        android:id="@+id/edtUsernam"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/username"
        android:textSize="10sp" />
    <EditText
        android:id="@+id/edtPass"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:textSize="10sp" />
    <LinearLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <Button
            android:text="@string/register"
            android:layout_marginLeft="10dp"
            android:id="@+id/btnregister"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="0dp"
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:id="@+id/tv_forgot_pass"
        android:layout_marginRight="40dp"
        android:textColor="@color/colorAccent"
        android:text="@string/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

</LinearLayout>
